# learn-rust

./: .gitignore  .gitmodules
rust-1.56/guessing_game/src/: main.rs
rust-1.56/projects/add/: Cargo.toml
rust-1.56/projects/add/adder/: Cargo.toml
rust-1.56/projects/collection/src/: main.rs
rust-1.56/projects/enumes/src/: main.rs
rust-1.56/projects/generics/src/: main.rs
rust-1.56/projects/hello_wrold/: Cargo.toml
rust-1.56/projects/hello_wrold/src/: main.rs
rust-1.56/projects/loops/src/: main.rs
rust-1.56/projects/minigrep/: Cargo.toml
rust-1.56/projects/minigrep/src/: lib.rs  main.rs
rust-1.56/projects/my-closures-and-iter/: Cargo.toml
rust-1.56/projects/my-closures-and-iter/src/: main.rs
rust-1.56/projects/my-lifetime/: Cargo.toml
rust-1.56/projects/my-lifetime/src/: main.rs
rust-1.56/projects/my-smart-pointers/: Cargo.toml
rust-1.56/projects/my-smart-pointers/src/: main.rs
rust-1.56/projects/my-test/src/: lib.rs
rust-1.56/projects/my-test/tests/: add.rs
rust-1.56/projects/my-trait/: Cargo.toml
rust-1.56/projects/my-trait/src/: lib.rs  main.rs
rust-1.56/projects/ownership/src/: main.rs
rust-1.56/projects/panic-or-result/: Cargo.toml  hello.txt
rust-1.56/projects/panic-or-result/src/: main.rs
rust-1.56/projects/restaurant-2/: Cargo.toml
rust-1.56/projects/restaurant-2/src/: lib.rs
rust-1.56/projects/restaurant-3/: Cargo.toml
rust-1.56/projects/restaurant-3/src/lib/front_of_house/: hosting.rs
rust-1.57/wasm-game-of-life/: Cargo.toml  LICENSE_MIT
rust-1.57/wasm-game-of-life/src/: lib.rs
(+5 files in other folders)
