[package]
name = "restaurant-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "my_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "main"
path = "src/bin/bin.rs"


[[bin]]
name = "tmp"
path = "src/bin/tmp_2.rs"

[dependencies]
